--- a/Frontend/Views/Home/Index.cshtml
+++ b/Frontend/Views/Home/Index.cshtml
@@ -87,4 +87,8 @@
                             </div>
                         </div>
                     </div>
+                    <form id="projekt-form">
+                        <input type="text" id="projekt-name" placeholder="Projektname" required />
+                        <button type="submit">Projekt hinzufügen</button>
+                    </form>
                 </div>
